Prevent thumbnail overflow

--- a/taui/src/sass/06_components/_neighborhood-details.scss
+++ b/taui/src/sass/06_components/_neighborhood-details.scss
@@ -103,6 +103,9 @@
   }
 
   &__image {
+    width: 110px;
+    overflow: hidden;
+
     img {
       width: 110px;
       height: 83px;
